fixed isssue with the font-size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,7 @@ height: 280px;
   p{
     text-align: justify;
     padding: 1px;
+    font-size: 120px;
   }
 
   img{
@@ -175,17 +176,33 @@ height: 280px;
     height: 400px;
   }
 
+  .shortinfo>h1, .title{
+    font-size: 3.3em;
+  }
+
+  .longinfo>h1{
+    font-size: 3em;
+  }
+
   .floatleft, .floatright, .luca, .charlesdarwin{
     position: static;
     float: none;
+  }
+  .parrafodarwin, .shortinfo>p{
+    padding: 0;
+  }
+
+  .shortinfo>p{
+    font-size: 2.4em;
+  }
+
+  .longinfo>p, .list{
+    font-size: 2.3em;
   }
 
   #heredityfigure, #variationfigure, #adaptationfigure, .parrafodarwin{
     margin: 0;
   }
 
-  .parrafodarwin, .shortinfo>p{
-    padding: 0;
-  }
 
 }
